# src/models/index.ts
@@ -1,10 +1,10 @@
-export * from './ApiError'
-export * from './Provider'
-export * from './ProviderCategory'
-export * from './ProviderCategorySubcategories'
-export * from './ProviderFeature'
-export * from './ProviderTorrent'
-export * from './Success'
-export * from './Torrent'
-export * from './TorrentFile'
-export * from './Usage'
+export * from './ApiErrorModel'
+export * from './MagnetModel'
+export * from './ProviderCategoryModel'
+export * from './ProviderCategoryModelSubcategories'
+export * from './ProviderModel'
+export * from './ProviderTorrentModel'
+export * from './SuccessModel'
+export * from './TorrentFileModel'
+export * from './TorrentModel'
+export * from './UsageModel'
